welcome.lessons.welcome.variables.Variables.scala.error
Variables:1: error: not found: value public
public void run() { 
^Variables:1: error: Unit does not take parameters
public void run() { 
                  ^Variables:3: error: not found: value int
int nbpas = 0;
^Variables:4: error: not found: value int
int dejafait = 0;
^Variables:7: error: not found: value nbpas
  nbpas = nbpas + 1;
  ^Variables:12: error: not found: value nbpas
while (nbpas!=dejafait) {
       ^Variables:12: error: not found: value dejafait
while (nbpas!=dejafait) {
              ^Variables:14: error: not found: value dejafait
  dejafait = dejafait + 1;
  ^